--- a/taskexam/task1.css
+++ b/taskexam/task1.css
@@ -21,7 +21,7 @@
 }
 section{
     background-image:url(./90e8a546d883f14971b3c67b7c2419f5.jpg);
-    width: 1488px;
+    /* width: 1488px; */
     height: 400px;
     background-size: cover;
 }
